fix language switch

--- a/translations/en-US.json
+++ b/translations/en-US.json
@@ -59,11 +59,56 @@
     "files.title.label": "Title",
     "files.type": "Type",
     "files.upload": "Upload File",
-    "home.articles": "Articles",
-    "home.deploy": "Deploy",
-    "home.images": "Images",
-    "home.subtitle": "Manage your Hugo blog easily",
-    "home.title": "Hugo Manager",
+    "home.articles.count": "Articles",
+    "home.articles.total": "Total {count} articles",
+    "home.card.deploy": "Deploy Management",
+    "home.card.deploy.desc": "Build and deploy to server",
+    "home.card.file.management": "File Management",
+    "home.card.file.management.desc": "Browse and edit all files",
+    "home.card.new.blog": "New Blog",
+    "home.card.new.blog.desc": "Quickly create new blog articles",
+    "home.card.settings": "System Settings",
+    "home.card.settings.desc": "Configure system parameters",
+    "home.card.static.files": "Static Files",
+    "home.card.static.files.desc": "Manage Hugo project static file resources",
+    "home.card.trash": "Trash",
+    "home.card.trash.desc": "View deleted articles",
+    "home.create.now": "Create Now",
+    "home.current.hugo.project": "Current Hugo Project:",
+    "home.delete.confirm": "Are you sure you want to delete this article? It will be moved to trash.",
+    "home.delete.error": "Delete failed",
+    "home.delete.failed": "Delete failed",
+    "home.delete.success": "Article moved to trash",
+    "home.edit": "Edit",
+    "home.footer.copyright": "Hugo Manager © 2025 - Making blog writing easier",
+    "home.manage.files": "Manage Files",
+    "home.modal.article.title": "Article Title *",
+    "home.modal.article.type": "Article Type",
+    "home.modal.blog.article": "Blog Article",
+    "home.modal.cancel": "Cancel",
+    "home.modal.create.and.edit": "Create and Edit",
+    "home.modal.create.error": "Create failed",
+    "home.modal.create.failed": "Create failed",
+    "home.modal.new.article": "New Article",
+    "home.modal.posts.default": "posts (default)",
+    "home.modal.save.directory": "Save Directory",
+    "home.modal.static.page": "Static Page",
+    "home.modal.title.placeholder": "e.g.: My First Blog Post",
+    "home.modal.title.required": "Please enter article title",
+    "home.new.article": "New Article",
+    "home.no.articles": "No Articles",
+    "home.no.articles.hint": "Click the \"New Article\" button above to start writing!",
+    "home.recent.articles": "Recent Articles",
+    "home.refresh": "Refresh",
+    "home.root.directory": "Root Directory",
+    "home.search.articles": "Search Articles",
+    "home.search.button": "Search",
+    "home.search.found": "Found {count} related articles",
+    "home.search.no.results": "No matching articles found",
+    "home.search.placeholder": "Enter keywords to search article titles, content...",
+    "home.search.try.different": "Try using different keywords to search",
+    "home.subtitle": "Simple and efficient Hugo static blog management tool",
+    "home.title": "Hugo Blog Manager",
     "msg.build.success": "Build completed successfully",
     "msg.connection.test": "Testing connection...",
     "msg.deploy.success": "Deployment completed successfully",
