--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -59,11 +59,56 @@
     "files.title.label": "标题",
     "files.type": "类型",
     "files.upload": "上传文件",
-    "home.articles": "文章",
-    "home.deploy": "部署",
-    "home.images": "图片",
-    "home.subtitle": "轻松管理您的 Hugo 博客",
-    "home.title": "Hugo 管理器",
+    "home.articles.count": "篇文章",
+    "home.articles.total": "共 {count} 篇文章",
+    "home.card.deploy": "部署管理",
+    "home.card.deploy.desc": "构建和部署到服务器",
+    "home.card.file.management": "文件管理",
+    "home.card.file.management.desc": "浏览和编辑所有文件",
+    "home.card.new.blog": "新建博客",
+    "home.card.new.blog.desc": "快速创建新的博客文章",
+    "home.card.settings": "系统设置",
+    "home.card.settings.desc": "配置系统参数",
+    "home.card.static.files": "静态文件",
+    "home.card.static.files.desc": "管理Hugo项目的静态文件资源",
+    "home.card.trash": "回收站",
+    "home.card.trash.desc": "查看已删除的文章",
+    "home.create.now": "立即创建",
+    "home.current.hugo.project": "当前Hugo项目：",
+    "home.delete.confirm": "确定要删除这篇文章吗？文章将移至回收站。",
+    "home.delete.error": "删除失败",
+    "home.delete.failed": "删除失败",
+    "home.delete.success": "文章已移至回收站",
+    "home.edit": "编辑",
+    "home.footer.copyright": "Hugo Manager © 2025 - 让博客写作更简单",
+    "home.manage.files": "管理文件",
+    "home.modal.article.title": "文章标题 *",
+    "home.modal.article.type": "文章类型",
+    "home.modal.blog.article": "博客文章",
+    "home.modal.cancel": "取消",
+    "home.modal.create.and.edit": "创建并编辑",
+    "home.modal.create.error": "创建失败",
+    "home.modal.create.failed": "创建失败",
+    "home.modal.new.article": "新建文章",
+    "home.modal.posts.default": "posts (默认)",
+    "home.modal.save.directory": "保存目录",
+    "home.modal.static.page": "静态页面",
+    "home.modal.title.placeholder": "例如：我的第一篇博客",
+    "home.modal.title.required": "请输入文章标题",
+    "home.new.article": "新建文章",
+    "home.no.articles": "暂无文章",
+    "home.no.articles.hint": "点击上方\"新建文章\"按钮开始创作吧！",
+    "home.recent.articles": "最近文章",
+    "home.refresh": "刷新",
+    "home.root.directory": "根目录",
+    "home.search.articles": "搜索文章",
+    "home.search.button": "搜索",
+    "home.search.found": "找到 {count} 篇相关文章",
+    "home.search.no.results": "未找到匹配的文章",
+    "home.search.placeholder": "输入关键词搜索文章标题、内容...",
+    "home.search.try.different": "尝试使用不同的关键词进行搜索",
+    "home.subtitle": "简单、高效的Hugo静态博客管理工具",
+    "home.title": "Hugo 博客管理器",
     "msg.build.success": "构建完成",
     "msg.connection.test": "正在测试连接...",
     "msg.deploy.success": "部署完成",
